--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
 name: Build and Deploy to Vercel
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
+    inputs:
+      vercel_project_id:
+        description: 'Vercel Project ID'
+        required: true
 
 jobs:
   deploy:
@@ -11,7 +13,7 @@ jobs:
     env:
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      VERCEL_PROJECT_ID: ${{ inputs.vercel_project_id }}
     steps:
       - uses: actions/checkout@v4
 
@@ -29,4 +31,10 @@ jobs:
         run: npx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy prebuilt to Vercel
-        run: npx vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: |
+          for i in 1 2 3; do
+            npx vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }} && exit 0
+            echo "Deploy attempt $i failed, retrying in 30s..."
+            sleep 30
+          done
+          exit 1
